--- a/people/templates/people/base.html
+++ b/people/templates/people/base.html
@@ -11,6 +11,7 @@
     <!-- Base CSS -->
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/dark_mode.css' %}">
     
     <!-- People App CSS -->
     <link rel="stylesheet" href="{% static 'css/people_styles.css' %}">
