--- a/banking/templates/banking/deposit.html
+++ b/banking/templates/banking/deposit.html
@@ -32,7 +32,7 @@
                     {% csrf_token %}
                     
                     <div class="form-group">
-                        <label for="amount">Amount to Deposit ($)</label>
+                        <label for="amount">Amount to Deposit (KES)</label>
                         <input type="number" name="amount" id="amount" class="form-control" min="0.01" step="0.01" required>
                     </div>
                     
